src/index.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  ::-moz-selection {
    background-color: #e9e014;
    color: #252c35;
  }
  ::selection {
    background-color: #e9e014;
    color: #252c35;
  }

  .hero {
    font-size: 5rem;
  }

  .letter-spacing-xs {
    letter-spacing: -0.06rem;
  }
  .letter-spacing-2xs {
    letter-spacing: -0.35rem;
  }

  .stretch-vertycally {
    display: block;
    transform: scale(0.9, 2);
    transform-origin: 0% 70%;
  }

  .text-2xs {
    font-size: 0.4rem;
  }

  .hover-underline-animation {
    display: inline-block;
    position: relative;
    color: #252c35;
  }

  .hover-underline-animation::after {
    content: "";
    position: absolute;
    width: 100%;
    transform: scaleX(1);
    height: 1px;
    bottom: -2px;
    left: 0;
    background-color: #252c35;
    transform-origin: bottom left;
    transition: transform 0.75s ease-in-out;
  }

  .hover-underline-animation:hover::after {
    transform: scaleX(0);
    transform-origin: bottom right;
  }
}

